# Ada

./: .gitignore  Cargo.toml  README.md  build.bat  bundler.toml
src/: lib.rs  libold.rs  meta.rs
src/ada/: consts.rs  cordic.rs  editor.rs  meta.rs  mod.rs  partialbank.rs  state.rs  types.rs  voice.rs
src/ada/editor/: mod.rs
src/ada/modules/partial/: mod.rs  shift.rs
src/ada/note/: mod.rs  voice_allocator.rs
src/ada/synth/: mod.rs  sinebank.rs  testsine.rs  voice.rs
src/ada/util/: cordic.rs  mod.rs
